--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf=8">
-<title>
-MC lpt Testing
-</title>
-</head>
-<body>
-lpt test
+  <head>
+    <meta charset="utf=8">
 
-<body>
+    <title>
+      MC-QA testing.
+    </title>
+  </head>
+  <body>
+    <h1>test</h1>
+  </body>
 </html>
